# Battleships

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Battleship.cpp.28EDF71AD7FE3764.idx  Battleship.cpp.F19D8CC1E72EC3C5.idx  Battleship.h.C8BA313A33B5C71A.idx  Battleship.h.D6B09859A8763505.idx  Game.cpp.6A73BBEBB912BBF2.idx  Game.cpp.78515C84F5B4B371.idx  Game.h.1976FDD17A00A2D1.idx  Game.h.23AE9E1033151DAA.idx  Grid.cpp.649FD7D474EF7F09.idx  Grid.cpp.950D87BDB8A325C9.idx  Grid.h.0EF0ED7BFBFDD4E8.idx  Grid.h.D490567E73C80AC8.idx  Tile.cpp.B799FD6D6CB792B8.idx  Tile.cpp.EA98D32663433165.idx  Tile.h.891EADDF0E806F86.idx  Tile.h.9D7715070A0CEEBE.idx  main.cpp.12E72B62105336E4.idx  main.cpp.2541D752F2EDA976.idx
assets/: Lost.webm
headers/: Battleship.h  Game.h  Grid.h  Tile.h
sources/: Battleship.cpp  Game.cpp  Grid.cpp  Tile.cpp
